# pomelo

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
.cargo/: config
crates/bootloader/: Cargo.toml  Makefile.toml
crates/bootloader/.cargo/: config
crates/bootloader/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: graphics.rs  lib.rs  memory_mapping.rs
crates/kernel/: Cargo.toml  Makefile.toml  x86_64-unknown-none-elf.json
crates/kernel/.cargo/: config
crates/kernel/src/: allocator.rs  bitset.rs  canvas.rs  cxx_support.rs  events.rs  gdt.rs  graphics.rs  gui.rs  interrupts.rs  keyboard.rs  lib.rs  logger.rs  main.rs  memory.rs  memory_manager.rs  mouse.rs  mpsc.rs  msi.rs  paging.rs  pci.rs  ring_buffer.rs  screen.rs  task.rs  timer.rs  triple_buffer.rs  x86_64.rs  xhci.rs
crates/kernel/src/graphic/: canvas.rs  console.rs  screen.rs
crates/kernel/src/graphics/: buffer.rs  canvas.rs  console.rs  layer.rs  mouse.rs  screen.rs  widgets.rs  window_manager.rs  windows.rs
crates/kernel/src/graphics/widgets/: console.rs  text.rs  text_window.rs
crates/kernel/src/gui/: mouse.rs  widgets.rs  window_manager.rs  windows.rs
crates/kernel/src/gui/widgets/: console.rs  desktop.rs  terminal.rs  text_field.rs  text_window.rs
