[package]
name = "pomelo-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
uefi = { version = "0.13.0", features = ["alloc", "logger", "exts"] }
uefi-services = "0.10.0"
object = { version = "0.28.1", default-features = false, features = ["read"] }

# TODO: Remove when it's published to crates.io
[patch.crates-io]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git", rev = "5b92cb3fc4fb82bd69ff3733013ef436eb30180d" }
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs.git", rev = "5b92cb3fc4fb82bd69ff3733013ef436eb30180d" }
