cargo-features = ["per-package-target"]

[package]
name = "pomelo-kernel"
version = "0.1.0"
edition = "2021"
#forced-target = "x86_64-unknown-none-elf"

[[bin]]
name = 'kernel'
path = 'src/main.rs'

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
delegate = "0.6.1"
derive-getters = "0.2.0"
font8x8 = { version = "0.3.1", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pomelo-common = { path = "../common" }
snafu = { version = "0.6.10", default-features = false }
spin = "0.9.2"
mikanos_usb = { git = "https://github.com/gifnksm/sabios.git", rev = "0f952f66a5665dbe4f6c5756dbb8537a0e1b9181" }

