cargo-features = ["per-package-target"]

[package]
name = "pomelo-kernel"
version = "0.1.0"
edition = "2021"
#forced-target = "x86_64-unknown-none-elf"

[[bin]]
name = 'kernel'
path = 'src/main.rs'

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
delegate = "0.6.1"
derive-getters = "0.2.0"
font8x8 = { version = "0.3.1", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pomelo-common = { path = "../common" }
snafu = { version = "0.6.10", default-features = false }
spin = "0.9.2"
mikanos_usb = { git = "https://github.com/gifnksm/sabios.git", rev = "50433cd96d939a156607eb25f1b3724a1a4f6e68" }
log = "0.4.14"
x86_64 = "0.14.7"
bitfield = "0.13.2"

