cargo-features = ["per-package-target"]

[package]
name = "pomelo-kernel"
version = "0.1.0"
edition = "2021"
#forced-target = "x86_64-unknown-none-elf"

[[bin]]
name = 'kernel'
path = 'src/main.rs'

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
delegate = "0.6.1"
derive-getters = "0.2.0"
font8x8 = { version = "0.3.1", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pomelo-common = { path = "../common" }
snafu = { version = "0.6.10", default-features = false }
mikanos_usb = { git = "https://github.com/gifnksm/sabios.git", rev = "a0729dbdaafbbc318c6bc13636a3a17a842c782b" }
log = "0.4.14"
x86_64 = "0.14.7"
bitfield = "0.13.2"
linked_list_allocator = "0.9.1"
spinning_top = "0.2.4"
bitflags = "1.3.2"
acpi = "4.1.0"

